[package]
name = "ipgeows"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-util = { version = "0.3.31", default-features = false, features = ["sink"] }
reqwest = { version = "0.12.28", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "net", "macros", "time"] }
tokio-tungstenite = "0.28.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true